--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/mindofmatthew/sound-server#readme",
   "dependencies": {
+    "codemirror": "^5.48.4",
     "express": "^4.17.1",
     "parcel-bundler": "^1.12.3",
     "react": "^16.9.0",
+    "react-codemirror2": "^6.0.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "supercolliderjs": "^0.14.2",
