--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "codemirror": "^5.48.4",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-ws": "^4.0.0",
     "parcel-bundler": "^1.12.3",
     "react": "^16.9.0",
     "react-codemirror2": "^6.0.0",
