--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node-wrapper around supercollider synthesis engine",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js",
+    "start": "node server/index.js --no-sound",
+    "start-sound": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,13 +23,12 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-ws": "^4.0.0",
+    "osc": "^2.3.1",
     "parcel-bundler": "^1.12.3",
     "react": "^16.9.0",
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1",
-    "supercolliderjs": "^0.14.2",
-    "ws": "^7.1.2"
+    "react-router-dom": "^5.0.1"
   },
   "prettier": {
     "singleQuote": true,
